--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 services:
-  # Backend API servicee
+  # Backend API service
   - type: web
     name: cleaning-manager-api
     runtime: node
@@ -9,16 +9,16 @@ services:
       - key: NODE_ENV
         value: production
       - key: MONGODB_URI
-        value: mongodb://localhost:27017/cleaning-management
+        value: ${MONGODB_URI}
         sync: false
       - key: PORT
         value: 3000
         sync: false
       - key: JWT_SECRET
-        value: your-super-secret-jwt-key-change-this-in-production-2024
+        value: ${JWT_SECRET}
         sync: false
       - key: JWT_REFRESH_SECRET
-        value: your-super-secret-refresh-jwt-key-change-this-in-production-2024
+        value: ${JWT_REFRESH_SECRET}
         sync: false
       - key: EMAIL_PROVIDER
         value: gmail
@@ -27,7 +27,7 @@ services:
         value: brahafiona4@gmail.com
         sync: false
       - key: EMAIL_APP_PASSWORD
-        value: aust hema avua cvzt
+        value: ${EMAIL_APP_PASSWORD}
         sync: false
       - key: COMPANY_EMAIL
         value: brahafiona4@gmail.com
@@ -51,3 +51,7 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
