--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://localhost:27017/cleaning-management
+MONGODB_URI=mongodb+srv://fjonabraha:fjona1234@cluster0.ewbpyr2.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-2024
 JWT_REFRESH_SECRET=your-super-secret-refresh-jwt-key-change-this-in-production-2024
